# titan

./: .gitignore  CMakeLists.txt
intrinsics/: CMakeLists.txt
src/: emulator.cpp  emulator.hpp  explorer.cpp  lifter.cpp  logger.hpp  main.cpp  tracer.cpp  tracer.hpp  utils.cpp  utils.hpp
src/il/: optimizer.cpp  solver.cpp  solver.hpp
src/il/passes/: alias.cpp  alias.hpp
src/vm/: instruction.cpp  instruction.hpp  routine.hpp
